fix hadder h1 and button on small screen

--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -23,6 +23,14 @@ background: linear-gradient(90deg, rgb(216, 239, 248) 0%, rgba(185,234,255,1) 27
     color:#0d30bd;
     /* -webkit-text-stroke: 4px var(--secondary-color-light);  */
   }
+  @media only screen and (max-width: 650px) {
+    .header h1{
+      font-size: 2.5rem;
+      font-family: 'Oleo Script', cursive;
+      color:#0d30bd;
+      
+    }}
+
   
   .main-image {
     width: 100%;
