--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -13,6 +13,15 @@
     font-weight: bold;
     transition:all ease-in-out 300ms;
   }
+  @media only screen and (max-width: 650px) {
+    .button {
+     margin-right: 10px;
+     padding:8px 12px; 
+    }
+
+
+  
+  }
   
   .button:hover
    {
